--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,30 @@
 :root {
   /* Primary */
-  --soft-cyan: hsl(174, 77%, 80%); /* (Full Slider Bar)*/
-  --strong-cyan: hsl(174, 86%, 45%); /*   (Slider Backround)*/
-  --light-grayish-red: hsl(14, 92%, 95%); /*(Discount Background)*/
-  --light-red: hsl(15, 100%, 70%); /*(Discount Text)*/
-  --pale-blue: hsl(226, 100%, 87%); /*(CTA Text)*/
+  --soft-cyan: hsl(174, 77%, 80%);
+  /* (Full Slider Bar)*/
+  --strong-cyan: hsl(174, 86%, 45%);
+  /*   (Slider Background)*/
+  --light-grayish-red: hsl(14, 92%, 95%);
+  /*(Discount Background)*/
+  --light-red: hsl(15, 100%, 70%);
+  /*(Discount Text)*/
+  --pale-blue: hsl(226, 100%, 87%);
+  /*(CTA Text)*/
   /* Neutral */
-  --white: hsl (0, 0%, 100%); /* (Pricing Component Background) */
-  --very-pale-blue: hsl(230, 100%, 99%); /* (Main Background) */
-  --light-grayish-blue: hsl(224, 65%, 95%); /* (Empty Slider Bar) */
-  --light-grayish-blue: hsl(223, 50%, 87%); /*(Toggle Background)*/
-  --grayish-blue: hsl(225, 20%, 60%); /* (Text) */
-  --dark-desaturated-blue: hsl(227, 35%, 25%); /* (Text & CTA Background) */
+  --white: hsl (0, 0%, 100%);
+  /* (Pricing Component Background) */
+  --very-pale-blue: hsl(230, 100%, 99%);
+  /* (Main Background) */
+  --light-grayish-blue-slider: hsl(224, 65%, 95%);
+  /* (Empty Slider Bar) */
+  --light-grayish-blue: hsl(223, 50%, 87%);
+  /*(Toggle Background)*/
+  --grayish-blue: hsl(225, 20%, 60%);
+  /* (Text) */
+  --dark-desaturated-blue: hsl(227, 35%, 25%);
+  /* (Text & CTA Background) */
 }
+
 *,
 *::before,
 *::after {
@@ -20,80 +32,294 @@
 }
 
 body,
-div {
+div,
+ul {
   padding: 0;
   margin: 0;
 }
+
 body {
+  font-size: 15px;
+  font-family: "Manrope", sans-serif;
   min-height: 100vh;
 }
+
 .bg-pattern {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   z-index: -2;
-  height: 70vh;
+  height: 66vh;
   min-height: 200px;
-  width: 100vw;
-  background: hsl(222, 86%, 97%);
-  border-bottom-left-radius: 200px;
+  width: 100%;
+  background: #f1f5fe;
+  border-bottom-left-radius: 170px;
+  display: grid;
+  justify-items: center;
+  padding-top: 4rem;
+}
+
+header {
+  text-align: center;
+  padding-top: 5rem;
+  padding-bottom: 4rem;
+}
+
+.header__title {
+  font-size: 1.6rem;
+  color: var(--dark-desaturated-blue);
+}
+
+.header__subtitle {
+  font-size: 0.84rem;
+  font-weight: 800;
+  color: var(--grayish-blue);
+}
+
+.pricing-component {
+  --box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.011), 0 2.4px 5.3px rgba(0, 0, 0, 0.016),
+    0 4.5px 10px rgba(0, 0, 0, 0.02), 0 8px 17.9px rgba(0, 0, 0, 0.024),
+    0 15px 33.4px rgba(0, 0, 0, 0.029), 0 36px 80px rgba(0, 0, 0, 0.04);
+  --horizontal-padding: 3rem;
+}
+@media (max-width: 800px) {
+  .pricing-component {
+    --horizontal-padding: 1rem;
+  }
+}
+
+.pricing-component {
+  background: #fff;
+  border-radius: 0.5rem;
+  margin-bottom: 5rem;
+  box-shadow: var(--box-shadow);
+}
+
+.pricing-component__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem var(--horizontal-padding) 0;
+  color: var(--grayish-blue);
+  font-size: 0.86rem;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+.pricing-component__header .pricing-component__price {
+  color: var(--dark-desaturated-blue);
+  font-size: 2.74em;
+  font-weight: 800;
+  letter-spacing: -1px;
+  padding-right: 4px;
+}
+.pricing-component__header p:first-of-type {
+  text-transform: uppercase;
+}
+.pricing-component__header p:last-of-type {
+  display: flex;
+  align-items: center;
+}
+
+.pricing-component__controllers {
+  padding: 1rem var(--horizontal-padding);
+}
+.pricing-component__controllers > div:last-child {
+  padding: 2rem 0.6rem 1rem 0;
+  padding-right: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.billing-mode {
+  font-size: 0.74rem;
+  display: grid;
+  align-items: center;
+  grid-auto-flow: column;
+  padding-right: 0.5rem;
+  gap: 0.5rem;
+  color: var(--grayish-blue);
+}
+
+.discount-badge {
+  font-size: 0.7rem;
+  font-weight: 800;
+  color: var(--light-red);
+  border-radius: 100px;
+  padding: 2px 5px;
+  letter-spacing: -1;
+  background: rgba(255, 140, 102, 0.3);
+}
+
+.pricing-component__footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.9rem var(--horizontal-padding);
+  border-top: 1px solid rgba(133, 143, 173, 0.2);
+}
+
+.pricing__features {
+  list-style: georgian inside url(../images/icon-check.svg);
+  list-style-type: none;
+  color: var(--grayish-blue);
+  display: grid;
+  gap: 0.5rem;
+  font-weight: 800;
+  font-size: 0.7rem;
+}
+
+.pricing-component__start-btn {
+  background: var(--dark-desaturated-blue);
+  color: var(--pale-blue);
+  border-radius: 100px;
+  border: 0;
+  padding: 0.74rem 2.5rem;
 }
 
 .slider {
-  --value: 50px;
-  --height: 18px;
-  --width: 500px;
+  --value: 50%;
+  --height: 9px;
+  --width: 100%;
   --border-radius: 100px;
+  position: relative;
   -webkit-appearance: none;
   width: var(--width);
   height: var(--height);
-  background: #e1f5fe;
+  background: var(--light-grayish-blue-slider);
   border-radius: var(--border-radius);
   outline: none;
 }
 
-.slider:before {
+.slider::before {
   content: "";
   position: absolute;
-  background: #00bcd4;
+  background: var(--soft-cyan);
   width: var(--value);
   height: var(--height);
   border-radius: var(--border-radius) 0 0 var(--border-radius);
 }
 
 .slider::-webkit-slider-thumb {
-  position: relative;
-  z-index: 100;
-  -webkit-appearance: none;
-  appearance: none;
-  width: calc(var(--height) + var(--height) / 2);
-  height: calc(var(--height) + var(--height) / 2);
-  background: #00bcd4;
-  background-size: cover;
-  border-radius: 50%;
-  border: 2px solid #ff7407;
   cursor: pointer;
+  -webkit-appearance: none;
+  position: relative;
+  z-index: 10;
+  appearance: none;
+  width: 38px;
+  height: 38px;
+  background: url("../images/icon-slider.svg") no-repeat 50% center, var(--strong-cyan);
+  box-shadow: -5px 18px 24px rgba(16, 213, 194, 0.6);
+  border-radius: 50%;
+}
+
+.slider:hover::-webkit-slider-thumb {
+  background: url("../images/icon-slider.svg") no-repeat 50% center, #00b5a0;
+}
+
+.slider:focus::-webkit-slider-thumb {
+  cursor: grabbing;
+  background: url("../images/icon-slider.svg") no-repeat 50% center, #00b5a0;
 }
 
 .slider::-moz-range-thumb {
-  position: relative;
-  z-index: 100;
-  -webkit-appearance: none;
-  appearance: none;
-  width: calc(var(--height) + var(--height) / 2);
-  height: calc(var(--height) + var(--height) / 2);
-  background: #00bcd4;
-  background-size: cover;
-  border-radius: 50%;
-  border: 2px solid #ff7407;
   cursor: pointer;
+  -webkit-appearance: none;
+  position: relative;
+  z-index: 10;
+  appearance: none;
+  width: 38px;
+  height: 38px;
+  background: url("../images/icon-slider.svg") no-repeat 50% center, var(--strong-cyan);
+  box-shadow: -5px 18px 24px rgba(16, 213, 194, 0.6);
+  border-radius: 50%;
+}
+
+.slider:hover::-moz-slider-thumb {
+  background: url("../images/icon-slider.svg") no-repeat 50% center, #00b5a0;
+}
+
+.slider:focus::-moz-slider-thumb {
+  cursor: grabbing;
+  background: url("../images/icon-slider.svg") no-repeat 50% center, #00b5a0;
+}
+
+.toggle {
+  cursor: pointer;
+}
+.toggle .toggle_shape {
+  width: 40px;
+  height: 20px;
+  display: block;
+  border: 2px solid var(--light-grayish-blue);
+  border-radius: 20px;
+  background-color: var(--light-grayish-blue);
+  position: relative;
+  transition: 0.15s linear;
+}
+.toggle .toggle_shape:after {
+  transition: 0.15s linear;
+  content: "";
+  width: 16px;
+  height: 16px;
+  display: block;
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.15s linear;
+}
+.toggle input[type=checkbox] {
+  display: none;
+}
+.toggle input[type=checkbox]:checked + .toggle_shape {
+  border-color: var(--soft-cyan);
+  background-color: var(--soft-cyan);
+}
+.toggle input[type=checkbox]:checked + .toggle_shape:after {
+  left: 20px;
 }
 
 .attribution {
   font-size: 11px;
   text-align: center;
 }
+
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: #3e52a3;
 }
+
+.wrapper {
+  width: 38%;
+  margin: 0 auto;
+  min-height: 100vh;
+  display: grid;
+  align-items: center;
+  overflow: hidden;
+}
+@media (max-width: 800px) {
+  .wrapper {
+    width: 94%;
+  }
+  .wrapper .pricing-component__header {
+    flex-direction: column;
+  }
+  .wrapper .pricing-component__footer {
+    gap: 1rem;
+    flex-direction: column;
+  }
+}
+
+.design {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 100;
+  border-bottom: 8px solid salmon;
+  opacity: 0.6;
+}
+
+/*# sourceMappingURL=style.css.map */
