finish mobile version

--- a/css/_customSlider.scss
+++ b/css/_customSlider.scss
@@ -36,7 +36,7 @@
 }
 
 .slider:hover::-webkit-slider-thumb {
-  background: url("../images/icon-slider.svg") no-repeat 50% center, #00b5a0;
+  background: url("../images/icon-slider.svg") no-repeat 50% center, #50f0dd;
 }
 
 .slider:focus::-webkit-slider-thumb {
@@ -58,7 +58,7 @@
 }
 
 .slider:hover::-moz-slider-thumb {
-  background: url("../images/icon-slider.svg") no-repeat 50% center, #00b5a0;
+  background: url("../images/icon-slider.svg") no-repeat 50% center, #50f0dd;
 }
 
 .slider:focus::-moz-slider-thumb {
