--- a/css/_initial.scss
+++ b/css/_initial.scss
@@ -12,7 +12,9 @@
   --light-grayish-blue: hsl(223, 50%, 87%); /*(Toggle Background)*/
   --grayish-blue: hsl(225, 20%, 60%); /* (Text) */
   --dark-desaturated-blue: hsl(227, 35%, 25%); /* (Text & CTA Background) */
+  --break-point: 650px;
 }
+
 *,
 *::before,
 *::after {
