--- a/css/_pricing-component.scss
+++ b/css/_pricing-component.scss
@@ -3,12 +3,12 @@
     0 4.5px 10px rgba(0, 0, 0, 0.02), 0 8px 17.9px rgba(0, 0, 0, 0.024),
     0 15px 33.4px rgba(0, 0, 0, 0.029), 0 36px 80px rgba(0, 0, 0, 0.04);
   --horizontal-padding: 3rem;
-  @media (max-width: 800px) {
+  @media (max-width: 650px) {
     --horizontal-padding: 1rem;
     // .pricing-component__controllers {
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
+    //   display: flex;
+    //   align-items: center;
+    //   justify-content: center;
     // }
   }
 }
@@ -21,9 +21,16 @@
 }
 
 .pricing-component__header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
   align-items: center;
+  width: 100%;
+
+  .slider {
+    grid-column: 1/-1;
+  }
+
   padding: 2rem var(--horizontal-padding) 0;
   color: var(--grayish-blue);
   font-size: 0.86rem;
@@ -40,22 +47,20 @@
 
   p:first-of-type {
     text-transform: uppercase;
+    justify-self: start;
   }
   p:last-of-type {
     display: flex;
     align-items: center;
+    justify-self: end;
   }
 }
 
 .pricing-component__controllers {
-  padding: 1rem var(--horizontal-padding);
-  > div:last-child {
-    padding: 2rem 0.6rem 1rem 0;
-    padding-right: 0.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-  }
+  padding: 2rem calc(var(--horizontal-padding) + 0.5rem) 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .billing-mode {
